--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
     display: flex;
     flex-direction: column;
 
-    font-size: 10px;
+    font-size: 62.5%;
     background: rgb(149, 194, 215);
 }
 
@@ -46,21 +46,13 @@ a {
     text-align: center;
     text-transform: uppercase;
     font-family: lakeshore;
-    font-size: 37px;
+    font-size: 3.7em;
 }
 
 .main-content {
     flex: 11 auto;
     display: flex;
     flex-direction: column;
-}
-
-.thumbnail-item {
-    display: inline-block;
-    min-width: 120px;
-    max-width: 120px;
-    border: 1px solid rgb(100%, 100%, 100%);
-    border: 1px solid rgba(100%, 100%, 100%, 0.8)
 }
 
 .thumbnail-list {
@@ -75,6 +67,14 @@ a {
     overflow-x: auto;
 }
 
+.thumbnail-item {
+    display: inline-block;
+    min-width: 120px;
+    max-width: 120px;
+    border: 1px solid rgb(100%, 100%, 100%);
+    border: 1px solid rgba(100%, 100%, 100%, 0.8)
+}
+
 .thumbnail-image {
     display: block;
     width: 100%;
@@ -83,12 +83,12 @@ a {
 .thumbnail-title {
     display: block;
     margin: 0;
-    padding: 4px 10px;
+    padding: 0.4em 1em;
 
     background-color: rgb(96, 125, 139);
     color: rgb(202, 238, 255);
 
-    font-size: 18px;
+    font-size: 1.8em;
 }
 
 .detail-image-container {
@@ -98,7 +98,7 @@ a {
     align-items: center;
 }
 
-.detail-image-frame {
+.detail-image-wrapper {
     position: relative;
     text-align: center;
 }
@@ -108,10 +108,13 @@ a {
 }
 
 .detail-image-title {
+    position: absolute;
+    bottom: -0.3em;
+    left: 0.4em;
     font-family: airstreamregular;
     color: white;
     text-shadow: rgba(0, 0, 0, 0.9) 1px 2px 9px;
-    font-size: 50px;
+    font-size: 4em;
 }
 
 
@@ -127,7 +130,7 @@ a {
     .thumbnail-list {
         flex-direction: column;
         order: 0;
-        margin-left: 20px;
+        margin-left: 2em;
     }
 
     .thumbnail-item {
@@ -135,6 +138,6 @@ a {
     }
 
     .thumbnail-item + .thumbnail-item {
-        margin-top: 20px;
+        margin-top: 2em;
     }
 }
