--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,7 @@ a {
     display: flex;
     justify-content: space-between;
     list-style: none;
-    padding: 0;
-
+    padding: 20px 0;
     white-space: nowrap;
     overflow-x: auto;
 }
@@ -72,7 +71,13 @@ a {
     min-width: 120px;
     max-width: 120px;
     border: 1px solid rgb(100%, 100%, 100%);
-    border: 1px solid rgba(100%, 100%, 100%, 0.8)
+    border: 1px solid rgba(100%, 100%, 100%, 0.8);
+    transition: transform 133ms ease-in-out;
+}
+
+.thumbnail-item:hover {
+    transform: scale(1.2);
+    transition: transform 100ms ease-in;
 }
 
 .thumbnail-image {
@@ -98,9 +103,15 @@ a {
     align-items: center;
 }
 
+.is-tine {
+    transform: scale(0.001);
+    transition: transform 0ms;
+}
+
 .detail-image-wrapper {
     position: relative;
     text-align: center;
+    transition: transform 333ms cubic-bezier(1, .06, .28, 1);
 }
 
 .detail-image {
@@ -117,6 +128,19 @@ a {
     font-size: 4em;
 }
 
+.hidden-detail .detail-image-container {
+    display: none;
+}
+
+.hidden-detail .thumbnail-list {
+    flex-direction: column;
+    align-items: center;
+}
+
+.hidden-detail .thumbnail-item {
+    max-width: 80%;
+}
+
 
 /* --------------------------- */
 
@@ -131,6 +155,7 @@ a {
         flex-direction: column;
         order: 0;
         margin-left: 2em;
+        padding: 0 35px;
     }
 
     .thumbnail-item {
@@ -139,5 +164,9 @@ a {
 
     .thumbnail-item + .thumbnail-item {
         margin-top: 2em;
+    }
+
+    .detail-image-wrapper {
+        width: 70%;
     }
 }
